<resources>
    <string name="app_name">Wireless_Order</string>
    <string name="action_settings">Settings</string>

    <string name="user">用户</string>
    <string name="menu">点餐</string>
    <string name="order">订单</string>
    <string name="pay">结算</string>

    <string name="title_main">首页</string>
    <string name="title_sign_in">登录</string>
    <string name="title_sign_up">注册</string>
    <string name="title_user">用户</string>
    <string name="title_menu">菜单</string>
    <string name="title_order">订单</string>
    <string name="title_order_detail">订单详情</string>
    <string name="title_menu_detail">菜品详情</string>
    <string name="title_pay">结算</string>
    <string name="title_place_order">确认订单</string>

    <string name="cellphone">电话号</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
</resources>
