<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-50dp"
        android:layout_marginLeft="-50dp"
        android:layout_marginRight="-50dp"
        android:layout_marginTop="-50dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/bg_login"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/vg_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_round_rectangle_white_alpha"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/vg_mobileContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/img_mobile"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/ic_cell_phone_white"/>

                    <EditText
                        android:id="@+id/et_mobile"
                        style="@style/login_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/img_mobile"
                        android:hint="@string/username"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:paddingBottom="4dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="4dp"/>

                </RelativeLayout>

                <View style="@style/Divider.Horizontal.White"/>

                <RelativeLayout
                    android:id="@+id/vg_passwordContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/img_password"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/ic_lock_white"/>

                    <EditText
                        android:id="@+id/et_password"
                        style="@style/login_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/img_password"
                        android:hint="@string/password"
                        android:imeOptions="actionGo"
                        android:inputType="textPassword"
                        android:paddingBottom="4dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="4dp"/>

                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txt_btn_signin"
                style="@style/Button.ActionSheet.Blue"
                android:text="@string/title_sign_in"/>

            <TextView
                android:id="@+id/txt_btn_signup"
                style="@style/Button.ActionSheet.White"
                android:text="@string/title_sign_up"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>